RESOLVED FIXED313678
Grammar UI does not come up when clicking in a multi-word phrase.
https://bugs.webkit.org/show_bug.cgi?id=313678
Summary Grammar UI does not come up when clicking in a multi-word phrase.
Megan Gardner
Reported 2026-04-29 13:09:56 PDT
Grammar UI does not come up when clicking in a multi-word phrase.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-29 13:10:05 PDT
Megan Gardner
Comment 2 2026-04-29 13:16:08 PDT
EWS
Comment 3 2026-05-06 10:23:39 PDT
Committed 312712@main (24e681d50689): <https://commits.webkit.org/312712@main> Reviewed commits have been landed. Closing PR #63918 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.