Grammar UI does not come up when clicking in a multi-word phrase. https://bugs.webkit.org/show_bug.cgi?id=313678 rdar://175878797

Reviewed by Abrar Rahman Protyasha.

Grammar suggestions can span multiple words, but the suggestion UI
only appeared when clicking in the last word of the phrase.
This extends the fix from 310941@main to  work for all words
in the phrase by accepting endOfWord positions
that fall strictly inside the grammar marker range, and by
treating movement within the same grammar marker like movement
within the same word. This UI is mac only,
and therefore these tests should not run on iOS.

Test: editing/spelling/grammar-correction-shown-clicking-multiword-phrase.html

* LayoutTests/editing/spelling/grammar-arrow-downstream-into-multiword-phrase-expected.txt: Added.
* LayoutTests/editing/spelling/grammar-arrow-downstream-into-multiword-phrase.html: Added.
* LayoutTests/editing/spelling/grammar-arrow-upstream-into-multiword-phrase-expected.txt: Added.
* LayoutTests/editing/spelling/grammar-arrow-upstream-into-multiword-phrase.html: Added.
* LayoutTests/editing/spelling/grammar-correction-shown-clicking-multiword-phrase-expected.txt: Added.
* LayoutTests/editing/spelling/grammar-correction-shown-clicking-multiword-phrase.html: Added.
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::respondToChangedSelection):

Canonical link: https://commits.webkit.org/312712@main